Pagina's wat geoptimaliseerd voor mobile.

--- a/Website Maarten Reynders/over.html
+++ b/Website Maarten Reynders/over.html
@@ -63,7 +63,7 @@
             <h2> Hobby's: </h2>
 
             <div>
-                <table>
+                <table class="hobbyTable">
                     <tr>
                         <td> Programmeren: Dit is een hobby en een passie van me. </td>
                         <td> <img src="images/coding.jpg" alt="Een foto van code." height="150" width="170"> </td>
