--- a/Website Maarten Reynders/portfolio.html
+++ b/Website Maarten Reynders/portfolio.html
@@ -54,6 +54,7 @@
             </p>
         </div>
 
+        <div class="padding-div">
         <div class="main">
             <table>
 
@@ -108,6 +109,15 @@
             <img src="images/html5.png" alt="Logo van HTML5">
             <img src="images/css3.png" alt="Logo van CSS3">
             <img src="images/javascript.png" alt="Logo van javascript">
+        </div>
+        </div>
+
+        <div class="fixed-bottom footerDiv bg-dark">
+            <footer>
+                
+                <p>&#169 Maarten Reynders</p>
+                <img class="fbLogo" src="images/facebookLogo.jpg" alt="facebook">
+            </footer>
         </div>
 
         <!-- JavaScript Bundle with Popper (Bootstrap) -->
