-Footer toegevoegd aan elke pagina.

--- a/Website Maarten Reynders/cv.html
+++ b/Website Maarten Reynders/cv.html
@@ -45,7 +45,7 @@
 
         <h1> Curiculum Vitae </h1>
 
-        
+        <div class="bottom-padding">
         <div class="container py-5">
             <div class="main-timeline">
                 <div class="timeline left">
@@ -96,6 +96,15 @@
                     </div>
                 </div>
             </div>
+        </div>
+        </div>
+
+        <div class="fixed-bottom footerDiv bg-dark">
+            <footer>
+                
+                <p>&#169 Maarten Reynders</p>
+                <img class="fbLogo" src="images/facebookLogo.jpg" alt="facebook">
+            </footer>
         </div>
 
         <!-- JavaScript Bundle with Popper (Bootstrap) -->
