--- a/Website Maarten Reynders/index.html
+++ b/Website Maarten Reynders/index.html
@@ -68,7 +68,7 @@
 
         <h1> Welkom </h1>
 
-        <div class="main">
+        <div class="main bottom-padding">
             <p> 
                 Hallo en welkom op de website van Maarten Reynders. <br>
                 <br>
@@ -83,6 +83,14 @@
                 Graag hoor ik snel van u!
             </p>
         </div>
+
+        <div class="fixed-bottom footerDiv bg-dark">
+          <footer>
+              
+              <p>&#169 Maarten Reynders</p>
+              <img class="fbLogo" src="images/facebookLogo.jpg" alt="facebook">
+          </footer>
+      </div>
 
         <!-- JavaScript Bundle with Popper (Bootstrap) -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
