--- a/Website Maarten Reynders/over.html
+++ b/Website Maarten Reynders/over.html
@@ -48,7 +48,7 @@
             </div>
           </nav>
 
-        <div class="main">
+        <div class="main bottom-padding">
             <h1> Over </h1>
 
             <h2> Maarten Reynders: </h2>
@@ -100,6 +100,14 @@
                     </tr>
                 </table>
             </div>
+        </div>
+
+        <div class="fixed-bottom footerDiv bg-dark">
+            <footer>
+                
+                <p>&#169 Maarten Reynders</p>
+                <img class="fbLogo" src="images/facebookLogo.jpg" alt="facebook">
+            </footer>
         </div>
 
         <!-- JavaScript Bundle with Popper (Bootstrap) -->
