--- a/Website Maarten Reynders/contact.html
+++ b/Website Maarten Reynders/contact.html
@@ -49,7 +49,7 @@
 
         <h1> Contact </h1>
 
-        <div class="contactFormulier" >
+        <div class="contactFormulier bottom-padding" >
             <form action="/actionpage.php" method="post">
                 <label for="fname">Voornaam:</label><br>
                 <input type="text" id="fname" name="fname" placeholder="Voornaam"><br>
@@ -65,6 +65,15 @@
 
             </form>
         </div>
+
+        <div class="fixed-bottom footerDiv bg-dark">
+          <footer>
+              
+              <p>&#169 Maarten Reynders</p>
+              <img class="fbLogo" src="images/facebookLogo.jpg" alt="facebook">
+          </footer>
+      </div>
+
         <!-- JavaScript Bundle with Popper (Bootstrap) -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
