--- a/Website Maarten Reynders/portfolio.html
+++ b/Website Maarten Reynders/portfolio.html
@@ -54,62 +54,62 @@
             </p>
         </div>
 
-        <div class="padding-div">
-        <div class="main">
-            <table>
+        <div class="bottom-padding">
+            <div class="main">
+                <table>
 
-                <!--De headers van de table-->
-                <tr>
-                    <th> Project </th>
-                    <th> Skills </th>
-                    <th> Beschrijving </th>
-                </tr>
+                    <!--De headers van de table-->
+                    <tr>
+                        <th> Project </th>
+                        <th> Skills </th>
+                        <th> Beschrijving </th>
+                    </tr>
 
-                <!--Project en skills (table inhoud)-->
-                <tr>
-                    <td> Mijn website </td>
-                    <td> HTML, CSS, Javasript</td>
-                    <td> De website geschreven waar je nu op bent.</td>
-                </tr>
+                    <!--Project en skills (table inhoud)-->
+                    <tr>
+                        <td> Mijn website </td>
+                        <td> HTML, CSS, Javasript</td>
+                        <td> De website geschreven waar je nu op bent.</td>
+                    </tr>
 
-                <tr>
-                    <td> Oefening 03.05 Kwadranten</td>
-                    <td> C# </td>
-                    <td> Console applicatie geschreven om kwadranten te bepalen aan de hand van coordinaten.</td>
-                </tr>
+                    <tr>
+                        <td> Oefening 03.05 Kwadranten</td>
+                        <td> C# </td>
+                        <td> Console applicatie geschreven om kwadranten te bepalen aan de hand van coordinaten.</td>
+                    </tr>
 
-                <tr>
-                    <td> Oefening 04.05 Tussen 2 getallen</td>
-                    <td> C# </td>
-                    <td> Console applicatie die 2 getallen inleest en alle getallen tussen die twee geeft. </td>
-                </tr>
+                    <tr>
+                        <td> Oefening 04.05 Tussen 2 getallen</td>
+                        <td> C# </td>
+                        <td> Console applicatie die 2 getallen inleest en alle getallen tussen die twee geeft. </td>
+                    </tr>
 
-                <tr>
-                    <td> Oefening 05.05 Pijlen gooien</td>
-                    <td> C# </td>
-                    <td> Console applicatie waar je de landingsplaats ingeeft van je pijlen en een score terug krijgt.</td>
-                </tr>
+                    <tr>
+                        <td> Oefening 05.05 Pijlen gooien</td>
+                        <td> C# </td>
+                        <td> Console applicatie waar je de landingsplaats ingeeft van je pijlen en een score terug krijgt.</td>
+                    </tr>
 
-                <tr>
-                    <td> Oefening 06.05 Studenten Scores</td>
-                    <td> C# </td>
-                    <td> Console applicatie die de namen en scores van studenten opvraagt en dan een overzicht afprint van alle studenten.</td>
-                </tr>
+                    <tr>
+                        <td> Oefening 06.05 Studenten Scores</td>
+                        <td> C# </td>
+                        <td> Console applicatie die de namen en scores van studenten opvraagt en dan een overzicht afprint van alle studenten.</td>
+                    </tr>
 
-                <tr>
-                    <td> Oefening 07.05 Getallen Lijst</td>
-                    <td> C# </td>
-                    <td> Console applicatie dat vraagt om getallen in te geven en het laagste, hoogste en gemiddelde terug geeft.</td>
-                </tr>
-            </table>
-        </div>
+                    <tr>
+                        <td> Oefening 07.05 Getallen Lijst</td>
+                        <td> C# </td>
+                        <td> Console applicatie dat vraagt om getallen in te geven en het laagste, hoogste en gemiddelde terug geeft.</td>
+                    </tr>
+                </table>
+            </div>
 
-        <div class="portfolioLogos">
-            <img class="eersteImage" src="images/c-sharp.png" alt="Logo van c-sharp">
-            <img src="images/html5.png" alt="Logo van HTML5">
-            <img src="images/css3.png" alt="Logo van CSS3">
-            <img src="images/javascript.png" alt="Logo van javascript">
-        </div>
+            <div class="portfolioLogos">
+                <img class="eersteImage" src="images/c-sharp.png" alt="Logo van c-sharp">
+                <img src="images/html5.png" alt="Logo van HTML5">
+                <img src="images/css3.png" alt="Logo van CSS3">
+                <img src="images/javascript.png" alt="Logo van javascript">
+            </div>
         </div>
 
         <div class="fixed-bottom footerDiv bg-dark">
