--- a/Website Maarten Reynders/index.html
+++ b/Website Maarten Reynders/index.html
@@ -9,6 +9,8 @@
         <title> Portfolio van Maarten Reynders </title>
 
         <!-- CSS only -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css" rel="stylesheet"/>
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">   <!-- linken naar eigen css stylesheet-->
 
@@ -19,19 +21,6 @@
     </head>
 
     <body>
-
-        <!--Hier maken we de button nav menu.-->
-        <!-- <span class="menuButton" onclick="openNav()"> &#9776; </span>
-        <div class="vertical-menu" id="navMenu">
-            <a href="javascript:void(0)" class="closeButton" onclick="closeNav()"> &#9776; </a>
-            <a href="index.html" class="active"> Home </a>
-            <a href="portfolio.html"> Portfolio </a>
-            <a href="cv.html"> Curiculum Vitae</a>
-            <a href="over.html"> Over </a>
-            <a href="contact.html"> Contact </a>
-        
-        </div>
-        -->
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
@@ -66,7 +55,22 @@
             </div>
           </nav>
 
-        <h1> Welkom </h1>
+        <!-- Hero -->
+        <div class="p-5 text-center bg-image rounded-3" style="
+        background-image: url(images/matrix-hero.jpg);
+        height: 400px;
+        ">
+        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+        <div class="d-flex justify-content-center align-items-center h-100">
+          <div class="text-white">
+            <h1 class="mb-3">Welkom!</h1>
+            <h4 class="mb-3">Waar ideeën tot leven komen.</h4>
+            <a class="btn btn-outline-light btn-lg" href="contact.html" role="button">Verwezenlijk <strong>nu!</strong></a>
+          </div>
+        </div>
+        </div>
+        </div>
+        <!-- Hero -->
 
         <div class="main bottom-padding">
             <p> 
