footer toegevoegd aan alle pages.

--- a/Website Maarten Reynders/contact.html
+++ b/Website Maarten Reynders/contact.html
@@ -47,7 +47,7 @@
             </div>
           </nav>
 
-        <h1> Contact </h1>
+        <h1 class="my-heading-1"> Contact </h1>
 
         <div class="contactFormulier bottom-padding" >
             <form action="/actionpage.php" method="post">
