--- a/Website Maarten Reynders/cv.html
+++ b/Website Maarten Reynders/cv.html
@@ -43,7 +43,7 @@
             </div>
           </nav>
 
-        <h1> Curiculum Vitae </h1>
+        <h1 class="my-heading-1"> Curiculum Vitae </h1>
 
         <div class="bottom-padding">
         <div class="container py-5">
