--- a/Website Maarten Reynders/over.html
+++ b/Website Maarten Reynders/over.html
@@ -49,7 +49,7 @@
           </nav>
 
         <div class="main bottom-padding">
-            <h1> Over </h1>
+            <h1 class="my-heading-1"> Over </h1>
 
             <h2> Maarten Reynders: </h2>
             <div>
