--- a/Website Maarten Reynders/portfolio.html
+++ b/Website Maarten Reynders/portfolio.html
@@ -46,7 +46,7 @@
             </div>
           </nav>
 
-        <h1> Portfolio </h1>
+        <h1 class="my-heading-1"> Portfolio </h1>
 
         <div class="main"> 
             <p> 
