--- a/Website Maarten Reynders/portfolio.html
+++ b/Website Maarten Reynders/portfolio.html
@@ -18,9 +18,11 @@
         <!--Hier maken we de button nav menu.-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
+            <div class="toggler-div">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            </div>
 
             <a class="navbar-brand" href="#">Maarten Reynders</a>
           
