carousel toegevoegd aan CV

--- a/Website Maarten Reynders/index.html
+++ b/Website Maarten Reynders/index.html
@@ -96,9 +96,9 @@
     <h1 class="display-5 fw-bold">Welkom!</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Heb je een idee of wil je een samenwerking starten om software te bouwen? Dan ben je op de
-        juist plaats!</p>
+        juiste plaats!</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Verwezenlijk!</button>
+        <a class="btn btn-primary" href="contact.html" role="button">Verwezenlijk <strong>nu!</strong></a>
       </div>
     </div>
   </div>
@@ -162,7 +162,7 @@
       <footer>
 
         <p>&#169 Maarten Reynders</p>
-        <img class="fbLogo" src="images/facebookLogo.jpg" alt="facebook">
+        <a href="https://www.facebook.com/maarten.reynders"><img class="fbLogo" src="images/facebookLogo.jpg" alt="facebook"></a>
       </footer>
     </div>
 
