Contact page verbeterd en bootstrap logo toegevoegd

--- a/Website Maarten Reynders/index.html
+++ b/Website Maarten Reynders/index.html
@@ -158,7 +158,7 @@
       </div>
     </div>
 
-    <div class="fixed-bottom footerDiv bg-dark">
+    <div class="fixed-bottom text-center bg-dark">
       <footer>
 
         <p>&#169 Maarten Reynders</p>
