--- a/Website Maarten Reynders/portfolio.html
+++ b/Website Maarten Reynders/portfolio.html
@@ -50,13 +50,13 @@
 
         <h1 class="my-heading-1"> Portfolio </h1>
 
-        <div class="main"> 
+        <div class="main text-center"> 
             <p> 
                 Hier vind je mijn portfolio waar mijn verschillende projecten beschreven staan en de skills die ik hier voor nodig had:
             </p>
         </div>
 
-        <div class="bottom-padding">
+        <div class="bottom-padding container">
             <div class="main">
                 <table>
 
@@ -114,7 +114,7 @@
             </div>
         </div>
 
-        <div class="fixed-bottom footerDiv bg-dark">
+        <div class="fixed-bottom bg-dark text-center">
             <footer>
                 
                 <p>&#169 Maarten Reynders</p>
