--- a/Website Maarten Reynders/cv.html
+++ b/Website Maarten Reynders/cv.html
@@ -50,6 +50,7 @@
 
     <h1 class="my-heading-1"> Curiculum Vitae </h1>
 
+    <!--Timeline-->
     <div class="bottom-padding container">
         <div class="py-5">
             <div class="main-timeline">
@@ -104,23 +105,33 @@
                 </div>
             </div>
         </div>
+        <!--Timeline-->
 
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <!--Carousel-->
+        <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/c-sharp.png" class="d-block w-100" alt="...">
+                <img src="images/c-sharp.png" class="d-block w-100" alt="c-sharp logo">
               </div>
               <div class="carousel-item">
-                <img src="images/css3.png" class="d-block w-100" alt="...">
+                <img src="images/css3.png" class="d-block w-100" alt="css3 logo">
               </div>
               <div class="carousel-item">
-                <img src="images/html5.png" class="d-block w-100" alt="...">
+                <img src="images/html5.png" class="d-block w-100" alt="html5 logo">
+              </div>
+              <div class="carousel-item">
+                <img src="images/javascript.png" class="d-block w-100" alt="javascript logo">
+              </div>
+              <div class="carousel-item">
+                <img src="images/bootstrap-logo.png" class="d-block w-100" alt="bootstrap logo">
               </div>
             </div>
           </div>
+          <!--Carousel-->
     </div>
+    
 
-    <div class="fixed-bottom footerDiv bg-dark">
+    <div class="fixed-bottom text-center bg-dark">
         <footer>
 
             <p>&#169 Maarten Reynders</p>
