--- a/Website Maarten Reynders/over.html
+++ b/Website Maarten Reynders/over.html
@@ -49,11 +49,11 @@
             </div>
           </nav>
 
-        <div class="main bottom-padding">
+        <div class="container main bottom-padding">
             <h1 class="my-heading-1"> Over </h1>
 
             <h2> Maarten Reynders: </h2>
-            <div>
+            <div class="text-center">
                 <p>
                     Ik ben Maarten Reynders en graag vertel ik wat meer over mezelf.
                 </p>
@@ -103,7 +103,34 @@
             </div>
         </div>
 
-        <div class="fixed-bottom footerDiv bg-dark">
+        <div class="bottom-padding container">
+            <div class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/klimmen.jpg" class="img-fluid d-block w-100" alt="c-sharp logo">
+                    <p class="text-center">Klimmen</p>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/fitness.jpg" class="d-block w-100" alt="css3 logo">
+                    <p class="text-center">Fitness</p>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/coding.jpg" class="d-block w-100" alt="html5 logo">
+                    <p class="text-center">Coding</p>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/javascript.png" class="d-block w-100" alt="javascript logo">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/bootstrap-logo.png" class="d-block w-100" alt="bootstrap logo">
+                  </div>
+                </div>
+              </div>
+        </div>
+
+        
+
+        <div class="fixed-bottom text-center bg-dark">
             <footer>
                 
                 <p>&#169 Maarten Reynders</p>
