invalid feedback toegevoegd voor voornaam en achternaam

--- a/Website Maarten Reynders/contact.html
+++ b/Website Maarten Reynders/contact.html
@@ -73,6 +73,9 @@
         <div class="col-md-4">
           <label for="validationCustom01" class="form-label">Voornaam:</label>
           <input type="text" class="form-control" id="validationCustom01" placeholder="Mark" required>
+          <div class="invalid-feedback">
+            Geef je voornaam!
+          </div>
           <div class="valid-feedback">
             Ziet er goed uit!
           </div>
@@ -80,6 +83,9 @@
         <div class="col-md-4">
           <label for="validationCustom02" class="form-label">Achternaam:</label>
           <input type="text" class="form-control" id="validationCustom02" placeholder="De Ryckx" required>
+          <div class="invalid-feedback">
+            Geef je Achternaam!
+          </div>
           <div class="valid-feedback">
             Ziet er goed uit!
           </div>
