Footer aangepast met discord logo en cards een doel gegeven

--- a/Website Maarten Reynders/cv.html
+++ b/Website Maarten Reynders/cv.html
@@ -8,7 +8,8 @@
     <meta name="keywords" content="Portfolio, CV, Curiculum Vitae">
 
     <title> Portfolio van Maarten Reynders </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css"> <!--linken naar eigen css stylesheet-->
 </head>
@@ -110,39 +111,44 @@
         <!--Carousel-->
         <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="images/c-sharp.png" class="d-block w-100" alt="c-sharp logo">
-              </div>
-              <div class="carousel-item">
-                <img src="images/css3.png" class="d-block w-100" alt="css3 logo">
-              </div>
-              <div class="carousel-item">
-                <img src="images/html5.png" class="d-block w-100" alt="html5 logo">
-              </div>
-              <div class="carousel-item">
-                <img src="images/javascript.png" class="d-block w-100" alt="javascript logo">
-              </div>
-              <div class="carousel-item">
-                <img src="images/bootstrap-logo.png" class="d-block w-100" alt="bootstrap logo">
-              </div>
+                <div class="carousel-item active text-center">
+                    <img src="images/c-sharp.png" class="d-block w-100 rounded" alt="c-sharp logo">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/css3.png" class="d-block w-100" alt="css3 logo">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/html5.png" class="d-block w-100" alt="html5 logo">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/javascript.png" class="d-block w-100" alt="javascript logo">
+                </div>
+                <div class="carousel-item">
+                    <img src="images/bootstrap-logo.png" class="d-block w-100" alt="bootstrap logo">
+                </div>
             </div>
-          </div>
-          <!--Carousel-->
+        </div>
+        <!--Carousel-->
     </div>
-    
+
 
     <div class="fixed-bottom text-center bg-dark">
         <footer>
 
             <p>&#169 Maarten Reynders</p>
-            <img class="fbLogo" src="images/facebookLogo.jpg" alt="facebook">
+            <a href="https://discord.gg/9hfr8RFH" target="_blank"><img class="footerLogo"
+                    src="images/discord-card-logo.jpg" alt="discord logo"></a>
         </footer>
     </div>
 
     <!-- JavaScript Bundle with Popper (Bootstrap) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
-        <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </body>
 
