--- a/Website Maarten Reynders/index.html
+++ b/Website Maarten Reynders/index.html
@@ -57,40 +57,8 @@
 
     </div>
   </nav>
-
-
-  <!-- Hero
-        <div class="p-5 text-center bg-image rounded-3 view" style="
-        background-image: url(images/matrix-hero.jpg);
-        height: 400px;
-        ">
-        <div class="mask pattern-1">
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <div class="text-white">
-            <h1 class="mb-3">Welkom!</h1>
-            <h4 class="mb-3">Waar ideeën tot leven komen.</h4>
-            <a class="btn btn-outline-light btn-lg" href="contact.html" role="button">Verwezenlijk <strong>nu!</strong></a>
-          </div>
-        </div>
-        </div>
-        </div>
-         Hero -->
-
-  <!--
-         <div class="hero bg-dark text-secondary px-4 py-5 text-center">
-          <div class="py-5">
-            <h1 class="display-5 fw-bold text-white">Dark mode hero</h1>
-            <div class="col-lg-6 mx-auto">
-              <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Custom button</button>
-                <button type="button" class="btn btn-outline-light btn-lg px-4">Secondary</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      -->
-
+  
+  <!--Hero-->
   <div class="px-4 py-5 my-5 text-center">
     <img class="d-block mx-auto mb-4" src="images/logo.png" alt="" width="150" height="120">
     <h1 class="display-5 fw-bold">Welkom!</h1>
@@ -102,8 +70,9 @@
       </div>
     </div>
   </div>
+  <!--Hero-->
 
-  <div class="main bottom-padding container">
+  <div class="bottom-padding container">
     <p>
       Hallo en welkom op de website van Maarten Reynders. <br>
       <br>
@@ -124,34 +93,31 @@
       <div class="row">
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card" style="width: 14rem;">
-            <img class="card-img-top" src="images/c-sharp.png" alt="Card image cap">
+            <img class="card-img-top" src="images/facebook-card-logo.jpg" alt="Kaart van facebook">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h4 class="card-title">Mijn facebook</h4>
+              <p class="card-text">Hier kan je mijn facebook pagina vinden.</p>
+              <a href="https://www.facebook.com/maarten.reynders" target="_blank" class="btn btn-primary">Klik hier</a>
             </div>
           </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card" style="width: 14rem;">
-            <img class="card-img-top" src="images/css3.png" alt="Card image cap">
+            <img class="card-img-top" src="images/instagram-card-logo.jpg" alt="Kaart van instagram">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h4 class="card-title">Mijn instagram</h4>
+              <p class="card-text">Mijn instagram pagina is hier te vinden.</p>
+              <a href="https://www.instagram.com/reyndersmaarten/" target="_blank" class="btn btn-primary">klik hier</a>
             </div>
           </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card" style="width: 14rem;">
-            <img class="card-img-top" src="images/html5.png" alt="Card image cap">
+            <img class="card-img-top" src="images/discord-card-logo.jpg" alt="Kaart van discord">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h4 class="card-title">Mijn discord</h4>
+              <p class="card-text">Als u mijn projecten wilt volgen is discord zeker een goede plaats.</p>
+              <a href="https://discord.gg/9hfr8RFH" target="_blank" class="btn btn-primary">Klik hier</a>
             </div>
           </div>
         </div>
@@ -162,7 +128,7 @@
       <footer>
 
         <p>&#169 Maarten Reynders</p>
-        <a href="https://www.facebook.com/maarten.reynders"><img class="fbLogo" src="images/facebookLogo.jpg" alt="facebook"></a>
+        <a href="https://discord.gg/9hfr8RFH" target="_blank"><img class="footerLogo" src="images/discord-card-logo.jpg" alt="discord logo"></a>
       </footer>
     </div>
 
