fixed validation errors

--- a/Website Maarten Reynders/contact.html
+++ b/Website Maarten Reynders/contact.html
@@ -112,7 +112,7 @@
   <div class="fixed-bottom text-center bg-dark">
     <footer>
 
-      <p>&#169 Maarten Reynders</p>
+      <p>&#169; Maarten Reynders</p>
       <a href="https://discord.gg/9hfr8RFH" target="_blank"><img class="footerLogo" src="images/discord-card-logo.jpg" alt="discord logo"></a>
     </footer>
   </div>
