--- a/Website Maarten Reynders/index.html
+++ b/Website Maarten Reynders/index.html
@@ -57,7 +57,7 @@
 
     </div>
   </nav>
-  
+
   <!--Hero-->
   <div class="px-4 py-5 my-5 text-center">
     <img class="d-block mx-auto mb-4" src="images/logo.png" alt="" width="150" height="120">
@@ -127,18 +127,21 @@
     <div class="fixed-bottom text-center bg-dark">
       <footer>
 
-        <p>&#169 Maarten Reynders</p>
-        <a href="https://discord.gg/9hfr8RFH" target="_blank"><img class="footerLogo" src="images/discord-card-logo.jpg" alt="discord logo"></a>
+        <p>&#169; Maarten Reynders</p>
+        <a href="https://discord.gg/9hfr8RFH" target="_blank"><img class="footerLogo" src="images/discord-card-logo.jpg"
+            alt="discord logo"></a>
       </footer>
     </div>
+  </div>
 
-    <!-- JavaScript Bundle with Popper (Bootstrap) -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-      crossorigin="anonymous"></script>
+  <!-- JavaScript Bundle with Popper (Bootstrap) -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
